Fix border radius on mobile firefox

--- a/src/scss/modules/nav.module.scss
+++ b/src/scss/modules/nav.module.scss
@@ -31,6 +31,7 @@
 	width: 100%;
 	padding: 0.6rem 0;
 	border: 1px solid $colorWhite;
+	border-radius: 0;
 	background-color: transparent;
 	transition: $transitionShort;
 	cursor: pointer;
